<!--
  ~ The MIT License (MIT)
  ~ Copyright (c) 2017 BlueSkyFish
  ~
  ~ bicycle-manager-android - https://github.com/blueskyfish/bicycle-manager-android.git
  -->
<resources>
    <string name="app_name">Bicycle Manager</string>

    <string name="dialog_setting">Einstellungen</string>

    <string name="hint_user_email">E-Mail Adresse</string>
    <string name="hint_password">Passwort</string>

    <string name="fragment_setting">de.kirchnerei.bicycle.fragment.setting</string>
    <string name="fragment_overview">de.kirchnerei.bicycle.fragment.overview</string>
    <string name="fragment_battery_list">de.kirchnerei.bicycle.fragment.batteryList</string>
    <string name="fragment_battery_edit">de.kirchnerei.bicycle.fragment.batteryEdit</string>
    <string name="fragment_battery_detail">de.kirchnerei.bicycle.fragment.batteryDetail</string>
    <string name="fragment_battery_delete">de.kirchnerei.bicycle.fragment.batteryDelete</string>
    <string name="fragment_diagnose">de.kirchnerei.bicycle.fragment.diagnose</string>

    <string name="action_login">Anmelden</string>
    <string name="action_save">Speichern</string>
    <string name="action_cancel">Abbrechen</string>
    <string name="action_continue">Weiter</string>

    <string name="action_detail">Details</string>
    <string name="action_edit">Bearbeiten</string>
    <string name="action_delete">Löschen</string>


    <string name="battery_title">Batterie Management</string>
    <string name="battery_text">Verwaltet die Batterie Ladezyklen und zeigt eine Übersicht über die Entfernung in Kilometer.</string>
    <string name="setting_message">Die E-Mail Adresse und das Password verläßt nicht die Anwendung.\nDie beiden werden verwendet, um einen eindeutigen Token zu erstellen.</string>
    <string name="setting_title">Einstellungen</string>
    <string name="setting_text">Einstellungen bearbeiten.\nHier müssen die Login Daten und andere Dinge eingestellt werden.</string>
    <string name="setting_token_hint">Token</string>
    <string name="setting_change_email_error">Die Daten sind nicht vollständig. Bitte E-Mail und Password eingeben!</string>

    <string name="battery_image_hint">Batterie</string>
    <string name="battery_mileage_label">Kilometerstand</string>
    <string name="battery_average_speed_label">Ø Geschwindigkeit</string>
    <string name="battery_leftover_label">Rest</string>
    <string name="battery_date_label">Datum</string>
    <string name="battery_distance_label">Entfernung</string>

    <string name="battery_list_request_error">Die Anfrage nach den Batterie Elementen ist fehlgeschlagen!</string>
    <string name="battery_list_request_error_action">Diagnose!</string>
    <string name="battery_list_mapper_error">Das Ergebnis endhielt Fehler und musste verworfen werden!</string>
    <string name="battery_detail_request_error">Es ist ein Fehler aufgetreten. Die Daten ist nicht vorhanden!</string>

    <string name="battery_edit_request_get_error">Es ist ein Fehler aufgetreten! Es wird ein leerer Batterie Datensatz zurück gegeben.</string>
    <string name="battery_edit_mapper_error">Das Ergebnis endhielt Fehler und musst verworfen werden!</string>
    <string name="battery_edit_request_save_error">Der Batterie Eintrag konnte nicht gespeichert werden (http error)</string>

    <string name="battery_delete_header">Eintrag löschen!</string>
    <string name="battery_delete_error_delete">Der Batterie Eintrag konnte nicht gelöscht werden!</string>
    <string name="battery_delete_error_empty">Es ist kein Eintrag angegeben!</string>

    <string name="diagnose_title">Internet Diagnose</string>
    <string name="diagnose_message">Überprüfen der Internent Verbindung:</string>
    <string name="diagnose_signal_off">Es besteht keine Verbindung ins Internet</string>
    <string name="diagnose_signal_on">Die Verbindung ist in Ordnung</string>

    <string name="unit_format_distance">%1$s km</string>
    <string name="unit_format_speed">%1$s km/h</string>
    <string name="unit_format_date">dd.MM.yyyy</string>
    <string name="unit_format_separator">,</string>
    <string name="formatter_battery_title">Batterie %1$s (%2$s)</string>
</resources>
