<!--
  ~ The MIT License (MIT)
  ~ Copyright (c) 2017 BlueSkyFish
  ~
  ~ bicycle-manager-android - https://github.com/blueskyfish/bicycle-manager-android.git
  -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.blueskyfish.bicycle.battery.BatteryEditFragment"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/battery_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/battery_date_label"
                android:enabled="true"
                android:inputType="date"/>
        </android.support.design.widget.TextInputLayout>
        <ImageButton
            android:src="@android:drawable/ic_menu_my_calendar"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_accent"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingStart="4dp"
            android:paddingBottom="4dp"
            android:id="@+id/battery_datepicker"
            android:layout_gravity="center"/>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginBottom="@dimen/dialog_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/battery_average_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/battery_average_speed_label"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginBottom="@dimen/dialog_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/battery_mileage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/battery_mileage_label"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginBottom="@dimen/dialog_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@id/battery_leftover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/battery_leftover_label"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>

</LinearLayout>
